--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "spaceInvaders"]
 	path = spaceInvaders
 	url = https://github.com/TalesAmaral/spaceInvaders
+[submodule "latex"]
+	path = latex
+	url = https://github.com/TalesAmaral/latex
